# os-ipc

./: README.md
IPC_LIB/: CMakeLists.txt
IPC_LIB/src/FIFO/: cus_fifo.c
IPC_LIB/src/common/: model.h
IPC_LIB/src/posixmq/: posixmq.c  posixmq.h
IPC_LIB/src/posixshm/: posixshm.c
IPC_LIB/src/socket_tcp/: socket_tcp.c
IPC_LIB/src/socket_udp/: socket_udp.c  socket_udp.h
IPC_LIB/src/sysvmq/: sysvmq.c  sysvmq.h
IPC_LIB/src/sysvshm/: sysvshm.c
IPC_RECEIVE/: IPC_RECEIVE.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  receive_thread.cpp  receive_thread.h  sockettcpthread.cpp  sockettcpthread.h  uicommon.h  说明.txt
IPC_RECEIVE/include/common/: model.h
IPC_RECEIVE/include/fifo/: cus_fifo.h
IPC_RECEIVE/include/posixmq/: posixmq.h
IPC_RECEIVE/include/posixshm/: posixshm.h
IPC_RECEIVE/include/socket_udp/: socket_udp.h
IPC_SEND/: IPC_SEND.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sockettcpthread.cpp  sockettcpthread.h  uicommon.h  说明.txt
IPC_SEND/include/socket_tcp/: socket_tcp.h
IPC_SEND/include/sysvshm/: sysvshm.h
